--- a/PickupBabyAnimals/assets/pickupbabyanimals/lang/en.json
+++ b/PickupBabyAnimals/assets/pickupbabyanimals/lang/en.json
@@ -2,5 +2,8 @@
   "item-capturedbaby": "Captured Animal",
   "game:ingameerror-pickupbabyanimals-toobig": "Too big, requires backpack slot!",
   "game:ingameerror-pickupbabyanimals-cantpickup": "You can't pick up this species!",
-  "game:ingameerror-pickupbabyanimals-puppy-invfull": "No space in your inventory for a wolf pup."
+  "game:ingameerror-pickupbabyanimals-puppy-invfull": "No space in your inventory for a wolf pup.",
+  "pickupbabyanimals-hotkey-toggle": "Toggle animal pickup",
+  "pickupbabyanimals-chat-toggle-on": "Pick up animals: enabled",
+  "pickupbabyanimals-chat-toggle-off": "Pick up animals: disabled"
 }
