--- a/PickupBabyAnimals/assets/pickupbabyanimals/lang/eo.json
+++ b/PickupBabyAnimals/assets/pickupbabyanimals/lang/eo.json
@@ -2,5 +2,8 @@
   "item-capturedbaby": "Kaptita besto",
   "game:ingameerror-pickupbabyanimals-toobig": "Tro granda, bezonas dorsosakan fendon!",
   "game:ingameerror-pickupbabyanimals-cantpickup": "Vi ne povas preni ĉi tiun specion!",
-  "game:ingameerror-pickupbabyanimals-puppy-invfull": "Ne estas spaco en via inventaro por lupido."
+  "game:ingameerror-pickupbabyanimals-puppy-invfull": "Ne estas spaco en via inventaro por lupido.",
+  "pickupbabyanimals-hotkey-toggle": "Ŝalti/malŝalti besto-prenadon",
+  "pickupbabyanimals-chat-toggle-on": "Besto-prenado: ŝaltita",
+  "pickupbabyanimals-chat-toggle-off": "Besto-prenado: malŝaltita"
 }
