--- a/PickupBabyAnimals/assets/pickupbabyanimals/lang/fr.json
+++ b/PickupBabyAnimals/assets/pickupbabyanimals/lang/fr.json
@@ -2,5 +2,8 @@
   "item-capturedbaby": "Animal capturé",
   "game:ingameerror-pickupbabyanimals-toobig": "Trop grand, nécessite un emplacement de sac à dos !",
   "game:ingameerror-pickupbabyanimals-cantpickup": "Tu ne peux pas ramasser cette espèce !",
-  "game:ingameerror-pickupbabyanimals-puppy-invfull": "Pas assez de place dans ton inventaire pour un louveteau."
+  "game:ingameerror-pickupbabyanimals-puppy-invfull": "Pas assez de place dans ton inventaire pour un louveteau.",
+  "pickupbabyanimals-hotkey-toggle": "Activer/désactiver le ramassage des animaux",
+  "pickupbabyanimals-chat-toggle-on": "Ramasser les animaux : activé",
+  "pickupbabyanimals-chat-toggle-off": "Ramasser les animaux : désactivé"
 }
