--- a/PickupBabyAnimals/assets/pickupbabyanimals/lang/no.json
+++ b/PickupBabyAnimals/assets/pickupbabyanimals/lang/no.json
@@ -2,5 +2,8 @@
   "item-capturedbaby": "Fanget dyr",
   "game:ingameerror-pickupbabyanimals-toobig": "For stor, krever ryggsekkplass!",
   "game:ingameerror-pickupbabyanimals-cantpickup": "Du kan ikke plukke opp denne arten!",
-  "game:ingameerror-pickupbabyanimals-puppy-invfull": "Ingen plass i inventaret ditt til en ulvevalp."
+  "game:ingameerror-pickupbabyanimals-puppy-invfull": "Ingen plass i inventaret ditt til en ulvevalp.",
+  "pickupbabyanimals-hotkey-toggle": "Veksle dyreopplukking",
+  "pickupbabyanimals-chat-toggle-on": "Plukk opp dyr: aktivert",
+  "pickupbabyanimals-chat-toggle-off": "Plukk opp dyr: deaktivert"
 }
