--- a/PickupBabyAnimals/assets/pickupbabyanimals/lang/th.json
+++ b/PickupBabyAnimals/assets/pickupbabyanimals/lang/th.json
@@ -2,5 +2,8 @@
   "item-capturedbaby": "สัตว์ที่จับได้",
   "game:ingameerror-pickupbabyanimals-toobig": "ใหญ่เกินไป ต้องใช้ช่องกระเป๋าเป้!",
   "game:ingameerror-pickupbabyanimals-cantpickup": "คุณไม่สามารถอุ้มสัตว์ชนิดนี้ได้!",
-  "game:ingameerror-pickupbabyanimals-puppy-invfull": "ไม่มีที่ว่างในช่องเก็บของสำหรับลูกหมาป่า"
+  "game:ingameerror-pickupbabyanimals-puppy-invfull": "ไม่มีที่ว่างในช่องเก็บของสำหรับลูกหมาป่า",
+  "pickupbabyanimals-hotkey-toggle": "สลับการยกสัตว์ขึ้น",
+  "pickupbabyanimals-chat-toggle-on": "การยกสัตว์ขึ้น: เปิดใช้งาน",
+  "pickupbabyanimals-chat-toggle-off": "การยกสัตว์ขึ้น: ปิดใช้งาน"
 }
