--- a/PickupBabyAnimals/assets/pickupbabyanimals/lang/uk.json
+++ b/PickupBabyAnimals/assets/pickupbabyanimals/lang/uk.json
@@ -2,5 +2,8 @@
   "item-capturedbaby": "Спіймана тварина",
   "game:ingameerror-pickupbabyanimals-toobig": "Занадто велике, потрібен слот рюкзака!",
   "game:ingameerror-pickupbabyanimals-cantpickup": "Ти не можеш підняти цей вид!",
-  "game:ingameerror-pickupbabyanimals-puppy-invfull": "У твоєму інвентарі немає місця для вовченяти."
+  "game:ingameerror-pickupbabyanimals-puppy-invfull": "У твоєму інвентарі немає місця для вовченяти.",
+  "pickupbabyanimals-hotkey-toggle": "Перемкнути підбирання тварин",
+  "pickupbabyanimals-chat-toggle-on": "Підбирання тварин: увімкнено",
+  "pickupbabyanimals-chat-toggle-off": "Підбирання тварин: вимкнено"
 }
