--- a/PickupBabyAnimals/assets/pickupbabyanimals/lang/zh-cn.json
+++ b/PickupBabyAnimals/assets/pickupbabyanimals/lang/zh-cn.json
@@ -2,5 +2,8 @@
   "item-capturedbaby": "捕获的动物",
   "game:ingameerror-pickupbabyanimals-toobig": "太大了，需要背包槽位！",
   "game:ingameerror-pickupbabyanimals-cantpickup": "你无法抱起这种动物！",
-  "game:ingameerror-pickupbabyanimals-puppy-invfull": "你的背包里没有空间放下狼崽。"
+  "game:ingameerror-pickupbabyanimals-puppy-invfull": "你的背包里没有空间放下狼崽。",
+  "pickupbabyanimals-hotkey-toggle": "切换动物拾取",
+  "pickupbabyanimals-chat-toggle-on": "动物拾取：已启用",
+  "pickupbabyanimals-chat-toggle-off": "动物拾取：已禁用"
 }
