--- a/PickupBabyAnimals/assets/pickupbabyanimals/lang/ar.json
+++ b/PickupBabyAnimals/assets/pickupbabyanimals/lang/ar.json
@@ -2,5 +2,8 @@
   "item-capturedbaby": "حيوان مُلتقَط",
   "game:ingameerror-pickupbabyanimals-toobig": "كبير جدًا، يتطلب خانة حقيبة الظهر!",
   "game:ingameerror-pickupbabyanimals-cantpickup": "لا يمكنك حمل هذا النوع!",
-  "game:ingameerror-pickupbabyanimals-puppy-invfull": "لا توجد مساحة في جردك لِجَرو ذئب."
+  "game:ingameerror-pickupbabyanimals-puppy-invfull": "لا توجد مساحة في جردك لِجَرو ذئب.",
+  "pickupbabyanimals-hotkey-toggle": "تبديل التقاط الحيوانات",
+  "pickupbabyanimals-chat-toggle-on": "التقاط الحيوانات: مفعّل",
+  "pickupbabyanimals-chat-toggle-off": "التقاط الحيوانات: معطّل"
 }
