--- a/PickupBabyAnimals/assets/pickupbabyanimals/lang/cs.json
+++ b/PickupBabyAnimals/assets/pickupbabyanimals/lang/cs.json
@@ -2,5 +2,8 @@
   "item-capturedbaby": "Chycené zvíře",
   "game:ingameerror-pickupbabyanimals-toobig": "Příliš velké, vyžaduje slot batohu!",
   "game:ingameerror-pickupbabyanimals-cantpickup": "Tento druh nemůžeš zvednout!",
-  "game:ingameerror-pickupbabyanimals-puppy-invfull": "Ve tvém inventáři není místo pro vlčí štěně."
+  "game:ingameerror-pickupbabyanimals-puppy-invfull": "Ve tvém inventáři není místo pro vlčí štěně.",
+  "pickupbabyanimals-hotkey-toggle": "Přepnout zvedání zvířat",
+  "pickupbabyanimals-chat-toggle-on": "Zvedání zvířat: zapnuto",
+  "pickupbabyanimals-chat-toggle-off": "Zvedání zvířat: vypnuto"
 }
