--- a/PickupBabyAnimals/assets/pickupbabyanimals/lang/fi.json
+++ b/PickupBabyAnimals/assets/pickupbabyanimals/lang/fi.json
@@ -2,5 +2,8 @@
   "item-capturedbaby": "Napattu eläin",
   "game:ingameerror-pickupbabyanimals-toobig": "Liian suuri, vaatii reppupaikan!",
   "game:ingameerror-pickupbabyanimals-cantpickup": "Et voi poimia tätä lajia!",
-  "game:ingameerror-pickupbabyanimals-puppy-invfull": "Inventaarissasi ei ole tilaa sudenpennulle."
+  "game:ingameerror-pickupbabyanimals-puppy-invfull": "Inventaarissasi ei ole tilaa sudenpennulle.",
+  "pickupbabyanimals-hotkey-toggle": "Vaihda eläinten poimiminen päälle/pois",
+  "pickupbabyanimals-chat-toggle-on": "Eläinten poimiminen: käytössä",
+  "pickupbabyanimals-chat-toggle-off": "Eläinten poimiminen: pois käytöstä"
 }
